--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Build Gem
         run: bundle exec rake build
+        env:
+          DEPLOY_MODE: github
 
       - uses: fac/ruby-gem-setup-credentials-action@v2
         with:
@@ -36,3 +38,15 @@ jobs:
         with:
           key: github
           pre-release: true
+
+      - name: Publish to RubyGems
+        run: |
+            mkdir -p $HOME/.gem
+            touch $HOME/.gem/credentials
+            chmod 0600 $HOME/.gem/credentials
+            printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+            gem build *.gemspec
+            gem push *.gem
+        env:
+          GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
+          DEPLOY_MODE: rubygems
